fix: fix letter-spacing for mobile app description

--- a/coffee-house/home/styles/home.css
+++ b/coffee-house/home/styles/home.css
@@ -572,7 +572,6 @@ a {
   font-style: normal;
   font-weight: 400;
   line-height: 150%;
-  letter-spacing: -0.07px;
   margin-top: 1.5px;
 }
 
