--- a/coffee-house/scss/layout/_mobileapp.scss
+++ b/coffee-house/scss/layout/_mobileapp.scss
@@ -20,7 +20,6 @@
     font-style: normal;
     font-weight: 400;
     line-height: 150%;
-    letter-spacing: -0.07px;
     margin-top: 1.5px;
   }
 }
